# School-Work

./: .gitignore
CS3100_SoftwareEngineering/BlackJack/: .attr.py.swp  Game.py
CS3500_ProgrammingLanguagesTranslators/exam3/: temp.lisp  temp.pl
CS3500_ProgrammingLanguagesTranslators/exam3/Bonus/: bonus.cpp
CS3500_ProgrammingLanguagesTranslators/exam3/Final/: bonus.cpp  grader.sh
CS3500_ProgrammingLanguagesTranslators/exam3/P15/: .grader.sh.swp  grades.txt
CS3500_ProgrammingLanguagesTranslators/exam3/Prolog/: del.pl  problem14.pl
CS3500_ProgrammingLanguagesTranslators/hw1/: andersonM.l  example.l  ifile.txt  lex.yy.c  myfile.txt  outfile.txt
CS3500_ProgrammingLanguagesTranslators/hw2/: andersonM.l  andersonM.tab.c  andersonM.y  bison.tab.c  bison.y  example.tab.c  lex.yy.c  makefile  parser
CS3500_ProgrammingLanguagesTranslators/hw2/hw2_expected_output/: myIfPrintInputErros.txt  myNoOperatorErrors.txt  myNoSyntax.txt  myletLambdaErrors.txt  myletLambdaNoErrors.txt  myoperatorsErors.txt  parser
CS3500_ProgrammingLanguagesTranslators/hw2/hw2_sample_input/: parser
CS3500_ProgrammingLanguagesTranslators/hw2/temp/: bison.y  example.y  flex.l
CS3500_ProgrammingLanguagesTranslators/hw3/HW3_sample_input/: parser
CS3500_ProgrammingLanguagesTranslators/hw3/andersonM/: SymbolTable.h
CS3500_ProgrammingLanguagesTranslators/hw3/test/: andersonM.tab.c  andersonM.y
CS3500_ProgrammingLanguagesTranslators/hw4/: SymbolTableEntry.h  andersonM.tab.c  andersonM.y  lex.yy.c  makefile  old.y  parser  testScript.sh
CS3500_ProgrammingLanguagesTranslators/hw5/: makefile
CS3500_ProgrammingLanguagesTranslators/hw5/MFPL-Interpreter/: README.md  SymbolTable.h  SymbolTableEntry.h  andersonWendland.l  andersonWendland.tab.c  andersonWendland.y  lex.yy.c  makefile  parser  run.sh
CS3500_ProgrammingLanguagesTranslators/hw5/myoutput/: my_nestedLet.txt
CS3500_ProgrammingLanguagesTranslators/hw6/: main.lisp
CS3500_ProgrammingLanguagesTranslators/hw7/: hw7.pl  mystery.pl
CS3500_ProgrammingLanguagesTranslators/hw8/: andersonM.sh  grades.txt
CS3500_ProgrammingLanguagesTranslators/hw9/: andersonM.l  andersonM.tab.c  lex.yy.c  parser  run.sh
CS3500_ProgrammingLanguagesTranslators/hw9/submission/: SymbolTableEntry.h  andersonWendland.y
CS3500_ProgrammingLanguagesTranslators/hw9/submission 2/: SymbolTable.h
CS3600_ComputerSecurity/Final/: bin_01.out  bin_02.out  bin_03.out  bin_04.out
CS3600_ComputerSecurity/hw2/: Little_brother.txt  README.md  betterSubCrack.py  encrypted.txt  simpleSubCipher.py  temp.txt
CS3600_ComputerSecurity/hw2/books/: Hacker_Crackdown.txt  Hackers_Heroes_of_the_Computer_Revolution.txt  Manual_for_the_Solution_of_Military_Ciphers.txt  The_Book_of_War.txt
CS3600_ComputerSecurity/hw3/: inputfile.txt  keyfile.sec  outfile.txt  outfilt.txt
CS3600_ComputerSecurity/hw4/2018-fs-a-pa03-mcar43/: README.md  myKey.asc  mysum  officalsum  pa04.md
CS3600_ComputerSecurity/hw5/: .hw5.tex.swp  UDP.tex  tmp.txt
CS3600_ComputerSecurity/hw5/backup/: DNS.tex  IP.tex  TCP.tex  hw5.tex
CS3600_ComputerSecurity/hw5/caps/: HTTP2.pcapng  HTTP3.pcapng  TCP.pcapng
CS3600_ComputerSecurity/hw6/2018-fs-a-pa06-mcar43/: fw_setup.sh
CS3600_ComputerSecurity/pa02/: README.md  bin_otp.py  bin_otp_key_gen.py  keyfile.sec
CS3600_ComputerSecurity/pa02/old/: bin_otp_key_gen_old.py  bin_otp_old.py
CS4001_OffensiveSecurity/assignment2/: Target.apk  inject.py  script.js
CS4001_OffensiveSecurity/final/: README.txt
CS4001_OffensiveSecurity/final/MarcoPolo/: .gitignore  readme.md
CS4001_OffensiveSecurity/misson1/: nmap.out  payload.py
CS4001_OffensiveSecurity/misson1/cs4001-mission1/: generator.py  notbad  notbad2  payload  test
CS4096_SeniorDesign/Proposal/: Paper2.aux  Paper2.tex
CS4096_SeniorDesign/Scapy/: fakeProbe.py
CS4097_SeniorDesignII/Desktop/App/: Splicer.py  origTimeline.txt
CS4097_SeniorDesignII/WebApp/: README.md
CS4097_SeniorDesignII/WebApp/api/: app.py  config.py
CS5001_DeepLearning/HW1/: chocodata.txt  chocovalid.txt  learner1.py
CS5001_DeepLearning/HW3/: classifier.py  classifieroutput.txt  hw3data.txt  hw3valid.txt
CS5400_ArtificialIntelligence/Game/2019-sp-1a-game4-mcar43/: black.txt  white.txt
CS5400_ArtificialIntelligence/Game/Past/2019-sp-1a-game3-mcar43/: CMakeLists.txt  play.sh  tmp.txt
CS5400_ArtificialIntelligence/Game/Past/2019-sp-1a-game3-mcar43/Joueur.cpp/: CMakeLists.txt
CS5400_ArtificialIntelligence/Game/Past/2019-sp-1a-game3-mcar43/Joueur.cpp/games/chess/: additional_files.txt  ai.cpp  ai.hpp  board.cpp  board.hpp  constants.h
CS5400_ArtificialIntelligence/Game/Past/2019-sp-1a-game3-mcar43/chess/: ai.hpp
CS5601_CyberOpsAndMGMT/Bonus/: bonus.txt
CS5601_CyberOpsAndMGMT/CS_5601_Security/: Exam 4.docx  IGC Security Exam 1.docx  IGC Security Exam 2.docx  IGC Security Exam 3.docx  IGC Security Program 1.docx  IGC Security Program 10.docx  IGC Security Program 11.docx  IGC Security Program 12.docx  IGC Security Program 13.docx  IGC Security Program 2.docx  IGC Security Program 3.docx  IGC Security Program 4.docx  IGC Security Program 8.docx  IGC Security Program 9.docx
CS5601_CyberOpsAndMGMT/Exam3/: Exam3
CS5601_CyberOpsAndMGMT/Homework2/: aup.txt  instructions
CS5601_CyberOpsAndMGMT/Homework3/: prgrm_3
CS5602_Crpytography/DataFiles/: caesar.py  dc  decode.txt  decodeanddecrypt.txt  encodeanddecrypt.txt  enigma.txt  realotp.py  sub.py
CS5602_Crpytography/EncryptedPrelims/: my_prelim.txt  newOtp.py  otp.py  realotp.py  test.txt  tmp.txt
CS5602_Crpytography/HW1/: task1.py
CS5602_Crpytography/HW2/: euclid.py  hw2.tex  main.py  with.txt
CS5602_Crpytography/HW3/: hw3.tex  main.py
CS5602_Crpytography/HW4/: hw4.tex  jacobi.py  legendre.py  p_factor.py  res.txt
CS5602_Crpytography/Lecture Notes/: CS5602Lec11ProbabilityVideoLink.txt  CS5602Lec18HW04Prep.pptx
CS5602_Crpytography/Temp/: ANDERSONProb2b.txt  ANDERSONProb3.txt  ANDERSONProb4File1.txt  ANDERSONProb4File2.txt  ANDERSONProb4File3.txt  ANDERSONProb4File4.txt  ANDERSONProb4File5.txt  ANDERSONProb4File6.txt  ANDERSONProb5.txt  ANDERSONProb6.txt
(+157 files in other folders)
